--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
 
                 <div class="info-item">
                     <i class="fas fa-phone"></i>
-                    <p>+52 81 48 23 39 52</p>
+                    <p>+52 81.48.23.39.52</p>
                 </div>
                 <div class="info-item">
                     <i class="fas fa-envelope"></i>
-                    <p>contacto@navix.com.mx</p>
+                    <p>contacto@navix.mx</p>
                 </div>
             </div>
         </div>
@@ -157,7 +157,7 @@
                 <h3>Redes Sociales</h3>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-x-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
