--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                 <div class="info-item">
                     <i class="fas fa-phone"></i>
                     <p>+52 81.48.23.39.52</p>
+                    <a href="https://wa.me/528148233952" target="_blank" class="whatsapp-link">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
                 </div>
                 <div class="info-item">
                     <i class="fas fa-envelope"></i>
