--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Navix Consulting - Líder en implementación de ERP Dynamics NAV, transformación digital y servicios tecnológicos avanzados">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <!-- Header -->
@@ -72,6 +73,37 @@
                 <h3>Transformación Digital</h3>
                 <p>Estrategias de transformación digital</p>
             </div>
+        </div>
+    </section>
+
+    <!-- Banner Flash Section -->
+    <section class="banner-flash">
+        <div class="banner-container">
+            <div class="banner-slide">
+                <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="ERP Solutions">
+                <div class="banner-overlay">
+                    <h3>ERP Dynamics NAV</h3>
+                    <p>Optimización de procesos empresariales</p>
+                </div>
+            </div>
+            <div class="banner-slide">
+                <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Cloud Services">
+                <div class="banner-overlay">
+                    <h3>Infraestructura en la Nube</h3>
+                    <p>Soluciones escalables y seguras</p>
+                </div>
+            </div>
+            <div class="banner-slide">
+                <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Digital Transformation">
+                <div class="banner-overlay">
+                    <h3>Transformación Digital</h3>
+                    <p>Innovación tecnológica para tu negocio</p>
+                </div>
+            </div>
+        </div>
+        <div class="banner-controls">
+            <button class="prev-slide">&#10094;</button>
+            <button class="next-slide">&#10095;</button>
         </div>
     </section>
 
