--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Navix Consulting - Líder en implementación de ERP Dynamics NAV, transformación digital y servicios tecnológicos avanzados">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="banner-auto-dynamic.js" defer></script>
+    <script src="banner-reliable.js" defer></script>
     <script src="scripts.js" defer></script>
 </head>
 <body>
